--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <link rel="icon" type="image/ico" href="favicon.ico">
   </head>
-  <body>
+  <body class="_hide-scrollbar">
     <!-- quasar:entry-point -->
   </body>
 </html>
